<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="app_provider_description">Provider of MagicBinder to access data</string>
	<string name="app_provider_name">Provider of MagicBinder</string>
	<string name="binder_binders_cards_binder_dialog_title">Select binders_cards_binder</string>
	<string name="binder_binders_cards_binder_invalid_field_error">Field Binders_cards_binder is invalid.</string>
	<string name="binder_binders_cards_binder_label">Binders_cards_binder</string>
	<string name="common_create">Create</string>
	<string name="common_delete">Del</string>
	<string name="common_edit">Edit</string>
	<string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
	<string name="dialog_delete_title">Delete</string>
	<string name="menu_item_create">Add</string>
	<string name="menu_item_delete">Delete</string>
	<string name="menu_item_edit">Edit</string>
	<string name="menu_item_save">Save</string>
	<string name="binder_card_binder_dialog_title">Select binder</string>
	<string name="binder_card_binder_invalid_field_error">Field Binder is invalid.</string>
	<string name="binder_card_binder_label">Binder</string>
	<string name="binder_card_card_dialog_title">Select card</string>
	<string name="binder_card_card_invalid_field_error">Field Card is invalid.</string>
	<string name="binder_card_card_label">Card</string>
	<string name="binder_card_empty_list">Binder_Card list is empty !</string>
	<string name="binder_card_error_create">Binder_Card creation error…</string>
	<string name="binder_card_error_edit">Binder_Card edition error…</string>
	<string name="binder_card_not_found">No Binder_Card found to display…</string>
	<string name="binder_card_progress_load_message">Binder_Card is loading…</string>
	<string name="binder_card_progress_load_relations_message">Binder_Card related entities are loading...</string>
	<string name="binder_card_progress_load_relations_title">Binder_Card related entities loading</string>
	<string name="binder_card_progress_load_title">Binder_Card Loading progress</string>
	<string name="binder_card_progress_save_message">Binder_Card is saving to database…</string>
	<string name="binder_card_progress_save_title">Binder_Card save progress</string>
	<string name="binder_card_quality_dialog_title">Select quality</string>
	<string name="binder_card_quality_invalid_field_error">Field Quality is invalid.</string>
	<string name="binder_card_quality_label">Quality</string>
	<string name="binder_card_quantity_invalid_field_error">Field Quantity is invalid.</string>
	<string name="binder_card_quantity_label">Quantity</string>
	<string name="binder_empty_list">Binder list is empty !</string>
	<string name="binder_error_create">Binder creation error…</string>
	<string name="binder_error_edit">Binder edition error…</string>
	<string name="binder_name_invalid_field_error">Field Name is invalid.</string>
	<string name="binder_name_label">Name</string>
	<string name="binder_not_found">No Binder found to display…</string>
	<string name="binder_progress_load_message">Binder is loading…</string>
	<string name="binder_progress_load_relations_message">Binder related entities are loading...</string>
	<string name="binder_progress_load_relations_title">Binder related entities loading</string>
	<string name="binder_progress_load_title">Binder Loading progress</string>
	<string name="binder_progress_save_message">Binder is saving to database…</string>
	<string name="binder_progress_save_title">Binder save progress</string>
	<string name="card_binders_cards_card_dialog_title">Select binders_cards_card</string>
	<string name="card_binders_cards_card_invalid_field_error">Field Binders_cards_card is invalid.</string>
	<string name="card_binders_cards_card_label">Binders_cards_card</string>
	<string name="card_cardsetid_invalid_field_error">Field CardSetId is invalid.</string>
	<string name="card_cardsetid_label">CardSetId</string>
	<string name="card_colors_dialog_title">Select colors</string>
	<string name="card_colors_invalid_field_error">Field Colors is invalid.</string>
	<string name="card_colors_label">Colors</string>
	<string name="card_convertedmanacost_invalid_field_error">Field ConvertedManaCost is invalid.</string>
	<string name="card_convertedmanacost_label">ConvertedManaCost</string>
	<string name="card_empty_list">Card list is empty !</string>
	<string name="card_error_create">Card creation error…</string>
	<string name="card_error_edit">Card edition error…</string>
	<string name="card_id_invalid_field_error">Field Id is invalid.</string>
	<string name="card_id_label">Id</string>
	<string name="card_image_invalid_field_error">Field Image is invalid.</string>
	<string name="card_image_label">Image</string>
	<string name="card_name_invalid_field_error">Field Name is invalid.</string>
	<string name="card_name_label">Name</string>
	<string name="card_not_found">No Card found to display…</string>
	<string name="card_progress_load_message">Card is loading…</string>
	<string name="card_progress_load_relations_message">Card related entities are loading...</string>
	<string name="card_progress_load_relations_title">Card related entities loading</string>
	<string name="card_progress_load_title">Card Loading progress</string>
	<string name="card_progress_save_message">Card is saving to database…</string>
	<string name="card_progress_save_title">Card save progress</string>
	<string name="card_rarity_invalid_field_error">Field Rarity is invalid.</string>
	<string name="card_rarity_label">Rarity</string>
	<string name="card_typecard_invalid_field_error">Field TypeCard is invalid.</string>
	<string name="card_typecard_label">TypeCard</string>
	<string name="color_empty_list">Color list is empty !</string>
	<string name="color_error_create">Color creation error…</string>
	<string name="color_error_edit">Color edition error…</string>
	<string name="color_label_invalid_field_error">Field Label is invalid.</string>
	<string name="color_label_label">Label</string>
	<string name="color_not_found">No Color found to display…</string>
	<string name="color_progress_load_message">Color is loading…</string>
	<string name="color_progress_load_relations_message">Color related entities are loading...</string>
	<string name="color_progress_load_relations_title">Color related entities loading</string>
	<string name="color_progress_load_title">Color Loading progress</string>
	<string name="color_progress_save_message">Color is saving to database…</string>
	<string name="color_progress_save_title">Color save progress</string>
	<string name="quality_binders_cards_quality_dialog_title">Select binders_cards_quality</string>
	<string name="quality_binders_cards_quality_invalid_field_error">Field Binders_cards_quality is invalid.</string>
	<string name="quality_binders_cards_quality_label">Binders_cards_quality</string>
	<string name="quality_empty_list">Quality list is empty !</string>
	<string name="quality_error_create">Quality creation error…</string>
	<string name="quality_error_edit">Quality edition error…</string>
	<string name="quality_label_invalid_field_error">Field Label is invalid.</string>
	<string name="quality_label_label">Label</string>
	<string name="quality_not_found">No Quality found to display…</string>
	<string name="quality_progress_load_message">Quality is loading…</string>
	<string name="quality_progress_load_relations_message">Quality related entities are loading...</string>
	<string name="quality_progress_load_relations_title">Quality related entities loading</string>
	<string name="quality_progress_load_title">Quality Loading progress</string>
	<string name="quality_progress_save_message">Quality is saving to database…</string>
	<string name="quality_progress_save_title">Quality save progress</string>
	<string name="uri_not_supported">URI not supported</string>
	<string name="hello_world">Hello word</string>
	
	<string name="name_search_list">Search List</string>
	<string name="name_search_card_detail">Search Card Detail</string>
	<string name="name_binder_card_detail">Binder Card Detail</string>
	
	<string-array name="quantity_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
 
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    
    <string name="search_name_label">Card Name:</string>
    <string name="search_name_txt">e.g. Jace</string>
    <string name="search_text_label">Oracle:</string>
    <string name="search_text_txt">e.g. draws a card</string>
    <string name="search_color_label">Color:</string>
    <string name="search_manaCost_label">Mana Cost:</string>
    <string name="search_manaCost_txt">e.g. 1U</string>
    <string name="search_convertedManaCost_label">Converted Mana Cost</string>
    <string name="search_type_label">Type:</string>
    <string name="search_subType_label">SubType:</string>
    <string name="search_subType_txt">e.g. Human</string>
    <string name="search_power_label">Power</string>
    <string name="search_toughness_label">Toughness</string>
    <string name="search_loyalty_label">Loyalty</string>
    <string name="search_rarity_label">Rarity:</string>
    <string name="search_artist_label">Artist:</string>
    <string name="search_artist_txt">e.g. Aleksi Briclot</string>
    <string name="search_set_label">Set:</string>
    <string name="search_reset_button">RESET</string>
    <string name="search_search_button">SEARCH</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove card from Binder</string>
    <string name="eq">eq</string>
    <string name="not">not</string>
    <string name="lt">lt</string>
    <string name="lte">lte</string>
    <string name="gt">gt</string>
    <string name="gte">gte</string>
    
    
</resources>
