<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harmony="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/binder_card_quantity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/binder_card_quantity_label"/>
    <EditText
        android:id="@+id/binder_card_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/binder_card_quantity_label" />
    <TextView
        android:id="@+id/binder_card_card_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_quantity"
        android:text="@string/binder_card_card_label"/>
    <com.magicbinder.harmony.widget.SingleEntityWidget
        android:id="@+id/binder_card_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_card_label" />
    <TextView
        android:id="@+id/binder_card_binder_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_card_button"
        android:text="@string/binder_card_binder_label"/>
    <com.magicbinder.harmony.widget.SingleEntityWidget
        android:id="@+id/binder_card_binder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_binder_label" />
    <TextView
        android:id="@+id/binder_card_quality_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_binder_button"
        android:text="@string/binder_card_quality_label"/>
    <com.magicbinder.harmony.widget.SingleEntityWidget
        android:id="@+id/binder_card_quality_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binder_card_quality_label" />
</RelativeLayout>
